# tinyimg

./: .Rbuildignore  .gitattributes  .gitignore  ABORT_ANALYSIS.md  DESCRIPTION  DEVELOPMENT.md  FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  LICENSE  NAMESPACE  NEWS.md  README.md  configure  cran-comments.md  examples.html  index.html  manual.html  news.html  update-vendor.sh
.github/: copilot-instructions.md  copilot-setup-steps.yml
.github/workflows/: R-CMD-check.yaml  cargo-update.yaml  (+8 more)
R/: extendr-wrappers.R  optim_png.R  optimg-package.R  tinyimg-package.R  tinyimg.R  tinyjpg.R  tinypng.R
benchmarks/: README.md  benchmark-levels.R  benchmark-results.csv
examples/: benchmark-jpg.Rmd  benchmark-jpg.html  benchmark-png.Rmd  benchmark-png.html  benchmark.Rmd  cran-png.Rmd  cran-png.html  index.Rmd  litedown.yml
inst/: AUTHORS  WORDLIST
man/: lossy_choices.Rd  optim_png.Rd  optimg-package.Rd  tinyimg-package.Rd  tinyimg.Rd  tinyjpg.Rd  tinypng.Rd
patches/: cpu_features_common.h.patch  libdeflate-remove-abort.patch  utils.c.patch
playground/: _default.R  _default.Rmd  examples.txt  setup.R
src/: Makevars  Makevars.win  entrypoint.c
src/rust/: Cargo.toml  regenerate-checksums.sh  update-vendor.sh  vendor-original.tar.xz  vendor-trimmed.tar.xz  vendor.tar.xz
src/rust/patches/: README.md  extendr-api-build.rs.patch  extendr-api-src-error.rs.patch  extendr-api-src-prelude.rs.patch  extendr-api-src-robj-rinternals.rs.patch  extendr-api-src-wrapper-symbol.rs.patch  extendr-ffi-src-lib.rs.patch
src/rust/src/: lib.rs
tests/: test-all.R  test-ci.R
(+4 files in other folders)
